templates/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${name, my-app}
  labels:
    app: ${name}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${name}
  template:
    metadata:
      labels:
        app: ${name}
    spec:
      containers:
        - name: ${name}
          image: ${image, nginx/nginx}
          ports:
            - containerPort: ${port, 8080}
              name: http
