templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $NAME
  labels:
    app: $APP
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $APP
  template:
    metadata:
      labels:
        app: $APP
    spec:
      containers:
        - name: $APP
          image: $IMAGE
          ports:
            - containerPort: $PORT
              name: http
