templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $name
  labels:
    app: $pod_selector
spec:
  ports:
    - name: $port_name
      port: $port
      targetPort: $target_port
  selector:
    app: $pod_selector
